--- a/themes/cosora/public/panel.css
+++ b/themes/cosora/public/panel.css
@@ -92,6 +92,10 @@
 	display: none;
 }
 
+.panel_group_perms .formitem a {
+	margin-top: 5px;
+}
+
 #panel_word_filters .itemSeparator:before {
 	content: "|";
 	padding-left: 5px;
@@ -164,8 +168,11 @@
 	padding-top: 16px;
 }
 .ct-series-a .ct-bar, .ct-series-a .ct-line, .ct-series-a .ct-point, .ct-series-a .ct-slice-donut {
-    stroke: hsl(359,98%,53%) !important;
+    stroke: hsl(359,98%,33%) !important;
 }
 .ct-point {
-	stroke: hsl(359,98%,33%) !important;
+	stroke: hsl(359,98%,53%) !important;
+}
+.ct-point:hover {
+	stroke: hsl(359,98%,50%) !important;
 }
