--- a/templates/panel_inner_menu.html
+++ b/templates/panel_inner_menu.html
@@ -26,7 +26,7 @@
 	</div>
 	{{if eq .Zone "themes"}}
 		<div class="rowitem passive submenu"><a href="/panel/themes/menus/">{{lang "panel_menu_menus"}}</a></div>
-		<div class="rowitem passive submenu"><a href="#">{{lang "panel_menu_widgets"}}</a></div>
+		<div class="rowitem passive submenu"><a href="/panel/themes/widgets/">{{lang "panel_menu_widgets"}}</a></div>
 	{{end}}
 	{{end}}
 </div>
