--- a/templates/account_logins.html
+++ b/templates/account_logins.html
@@ -4,7 +4,7 @@
 <div class="colstack_item rowlist">
 	<!-- TODO: Do we need this inline CSS? -->
 	{{range .ItemList}}
-	<div class="rowitem">
+	<div class="rowitem{{if not .Success}} bg_red{{end}}">
 		<span style="float: left;">
 			<span>{{if .Success}}{{lang "account_logins_success"}}{{else}}{{lang "account_logins_failure"}}"{{end}}</span><br />
 			<small style="margin-left: 2px;font-size: 12px;" title="{{.IPAddress}}">{{.IPAddress}}</small>
