--- a/templates/header.html
+++ b/templates/header.html
@@ -4,14 +4,12 @@
 		<title>{{.Title}} | {{.Header.Site.Name}}</title>
 		<link href="/static/{{.Header.Theme.Name}}/main.css" rel="stylesheet" type="text/css">
 		{{range .Header.Stylesheets}}
-		<link href="/static/{{.}}" rel="stylesheet" type="text/css">
-		{{end}}
+		<link href="/static/{{.}}" rel="stylesheet" type="text/css">{{end}}
 		<meta property="x-loggedin" content="{{.CurrentUser.Loggedin}}" />
 		<script type="text/javascript" src="/static/init.js"></script>
 		<script type="text/javascript" src="/static/jquery-3.1.1.min.js"></script>
 		{{range .Header.Scripts}}
-		<script type="text/javascript" src="/static/{{.}}"></script>
-		{{end}}
+		<script type="text/javascript" src="/static/{{.}}"></script>{{end}}
 		<script type="text/javascript" src="/static/global.js"></script>
 		<meta name="viewport" content="width=device-width,initial-scale = 1.0, maximum-scale=1.0,user-scalable=no" />
 		{{if .Header.MetaDesc}}<meta name="description" content="{{.Header.MetaDesc}}" />{{end}}
