--- a/templates/panel_reglogs.html
+++ b/templates/panel_reglogs.html
@@ -7,7 +7,7 @@
 		</div>
 		<div id="panel_modlogs" class="colstack_item rowlist">
 			{{range .Logs}}
-			<div class="rowitem panel_compactrow">
+			<div class="rowitem panel_compactrow {{if not .Success}}bg_red{{end}}">
 				<span{{if not .Success}} class="panel_registration_attempt"{{end}} style="float: left;">
 					<span>{{if not .Success}}{{lang "panel_logs_registration_attempt"}}: {{end}}{{.Username}} ({{lang "panel_logs_registration_email"}}: {{.Email}}){{if .ParsedReason}} ({{lang "panel_logs_registration_reason"}}: {{.ParsedReason}}){{end}}</span>
 					{{if $.CurrentUser.Perms.ViewIPs}}<br /><small style="margin-left: 2px;font-size: 12px;" title="{{.IPAddress}}">{{.IPAddress}}</small>{{end}}
