--- a/themes/cosora/public/panel.css
+++ b/themes/cosora/public/panel.css
@@ -309,6 +309,29 @@
 }
 */
 
+.widget_normal {
+	display: flex;
+	width: 100%;
+}
+#widgetTmpl {
+	display: none;
+}
+.widget_disabled {
+	display: none;
+}
+.bg_red .widget_disabled {
+	display: inline;
+}
+.wtypes .formrow {
+	display: none;
+}
+.wtype_about .w_about, .wtype_simple .w_simple, .wtype_wol .w_wol, .wtype_default .w_default {
+	display: block;
+}
+.panel_widgets {
+	margin-bottom: 18px;
+}
+
 .pageset {
 	margin-left: 16px;
 }
