--- a/themes/nox/public/main.css
+++ b/themes/nox/public/main.css
@@ -170,10 +170,28 @@ li a {
 .sidebar .rowblock:not(.topic_list):not(.rowhead):not(.opthead) .rowitem {
 	margin-left: 12px;
 }
+.sidebar .search {
+	margin-left: 12px;
+}
+.widget_search:first-child {
+	margin-top: 36px;
+}
+.widget_search input {
+	width: 100%;
+	height: 30px;
+	margin-left: 0px;
+}
+.filter_list {
+	margin-top: 5px;
+}
 .colstack_right .colstack_item:not(.colstack_head):not(.rowhead) .rowitem {
 	border-radius: 3px;
 	background-color: #444444;
 	padding: 16px;
+}
+.filter_item {
+	margin-bottom: 5px;
+	padding: 4px;
 }
 .colstack_right .colstack_item:not(.colstack_head):not(.rowhead) .rowitem:not(:last-child) {
 	margin-bottom: 8px;
@@ -261,6 +279,10 @@ h1, h2, h3, h4, h5 {
 .sidebar .rowhead h1 {
 	font-size: 20px;
 }
+.sidebar .rowhead:not(:first-child) h1 {
+	margin-top: 12px;
+	font-size: 19px;
+}
 
 h2 {
 	font-size: 18px;
@@ -335,7 +357,14 @@ h2 {
 .more_topic_block_active {
 	display: block;
 }
-.hide_ajax_topic, .auto_hide, .show_on_edit:not(.edit_opened), .hide_on_edit.edit_opened, .link_select:not(.link_opened) {
+
+.hide_ajax_topic,
+.auto_hide,
+.show_on_edit:not(.edit_opened),
+.hide_on_edit.edit_opened,
+.show_on_block_edit:not(.edit_opened),
+.hide_on_block_edit.edit_opened,
+.link_select:not(.link_opened) {
 	display: none !important;
 }
 
@@ -866,7 +895,7 @@ input[type=checkbox]:checked + label .sel {
 	display: flex;
 }
 
-.rowlist.bgavatars, .micro_grid {
+.rowlist.bgavatars:not(.not_grid), .micro_grid {
 	display: grid;
 	/*grid-gap: 16px;
 	grid-row-gap: 8px;*/
@@ -888,6 +917,9 @@ input[type=checkbox]:checked + label .sel {
 	margin-bottom: 10px;
 	padding: 16px;
 }
+.rowlist.not_grid .rowitem {
+	flex-direction: row;
+}
 .rowlist.bgavatars .bgsub, .rowlist.bgavatars .rowTitle {
 	margin-left: auto;
 	margin-right: auto;
@@ -900,6 +932,15 @@ input[type=checkbox]:checked + label .sel {
 .rowlist.bgavatars .rowTitle {
 	font-size: 18px;
 	margin-top: 4px;
+}
+.rowlist.bgavatars.not_grid .bgsub {
+	height: 36px;
+	width: 36px;
+	margin-left: 8px;
+	margin-right: 12px;
+}
+.rowlist.bgavatars.not_grid .rowTitle {
+	margin-left: 0px;
 }
 
 .ip_search_block {
