--- a/templates/topics.html
+++ b/templates/topics.html
@@ -3,7 +3,7 @@
 <main id="topicsItemList" itemscope itemtype="http://schema.org/ItemList">
 
 <div class="rowblock rowhead topic_list_title_block{{if .CurrentUser.Loggedin}} has_opt{{end}}">
-	<div class="rowitem topic_list_title"><h1 itemprop="name">{{lang "topics_head"}}</h1></div>
+	<div class="rowitem topic_list_title"><h1 itemprop="name">{{.Title}}</h1></div>
 	{{if .CurrentUser.Loggedin}}
 		<div class="optbox">
 		{{if .ForumList}}
@@ -55,7 +55,6 @@
 </div>
 <div class="rowblock topic_create_form quick_create_form" style="display: none;" aria-label="{{lang "quick_topic.aria"}}">
 	<form name="topic_create_form_form" id="quick_post_form" enctype="multipart/form-data" action="/topic/create/submit/?session={{.CurrentUser.Session}}" method="post"></form>
-	<input form="quick_post_form" id="has_poll_input" name="has_poll" value="0" type="hidden" />
 	<img class="little_row_avatar" src="{{.CurrentUser.MicroAvatar}}" height="64" alt="{{lang "quick_topic.avatar_alt"}}" title="{{lang "quick_topic.avatar_tooltip"}}" />
 	<div class="main_form">
 		<div class="topic_meta">
@@ -70,31 +69,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="formrow topic_content_row">
-			<div class="formitem">
-				<textarea form="quick_post_form" id="input_content" name="topic-content" placeholder="{{lang "quick_topic.content_placeholder"}}" required></textarea>
-			</div>
-		</div>
-		<div class="formrow poll_content_row auto_hide">
-			<div class="formitem">
-				<div class="pollinput" data-pollinput="0">
-					<input type="checkbox" disabled />
-					<label class="pollinputlabel"></label>
-					<input form="quick_post_form" name="pollinputitem[0]" class="pollinputinput" type="text" placeholder="{{lang "quick_topic.add_poll_option"}}" />
-				</div>
-			</div>
-		</div>
-		<div class="formrow quick_button_row">
-			<div class="formitem">
-				<button form="quick_post_form" class="formbutton">{{lang "quick_topic.create_topic_button"}}</button>
-				<button form="quick_post_form" class="formbutton" id="add_poll_button">{{lang "quick_topic.add_poll_button"}}</button>
-				{{if .CurrentUser.Perms.UploadFiles}}
-				<input name="upload_files" form="quick_post_form" id="upload_files" multiple type="file" style="display: none;" />
-				<label for="upload_files" class="formbutton add_file_button">{{lang "quick_topic.add_file_button"}}</label>
-				<div id="upload_file_dock"></div>{{end}}
-				<button class="formbutton close_form">{{lang "quick_topic.cancel_button"}}</button>
-			</div>
-		</div>
+		{{template "topics_quick_topic.html" . }}
 	</div>
 </div>
 	{{end}}
@@ -106,9 +81,6 @@
 	{{range .TopicList}}{{template "topics_topic.html" . }}{{else}}<div class="rowitem passive rowmsg">{{lang "topics_no_topics"}}{{if .CurrentUser.Loggedin}}{{if .CurrentUser.Perms.CreateTopic}} <a href="/topics/create/">{{lang "topics_start_one"}}</a>{{end}}{{end}}</div>{{end}}
 </div>
 
-{{if gt .LastPage 1}}
 {{template "paginator.html" . }}
-{{end}}
-
 </main>
 {{template "footer.html" . }}
