--- a/templates/widget_simple.html
+++ b/templates/widget_simple.html
@@ -1,6 +1,6 @@
-<div class="rowblock rowhead">
+<div class="rowblock rowhead widget_simple">
 	<div class="rowitem"><h1>{{.Name}}</h1></div>
 </div>
-<div class="rowblock">
+<div class="rowblock widget_simple">
 	<div class="rowitem">{{.Text}}</div>
 </div>
